src/render/snapshots/webgit__render__about__tests__about_html_index.snap
---
source: src/render/about.rs
expression: "render(AboutProps { repo: None, ..fixture(true) })"
---
<div class="about">
<h3 class="summary-heading">gib viewer</h3>
<p>gib ("git-in-browser") allows you to view repositories entirely client-side. Objects are fetched as needed and stored in IndexedDB, similar to how <code>git</code> normally works.<br>The <a href="https://git.legoktm.com/public/webgit.git/">source code</a> is available (<code>0123abcd</code>).</p>
<table class="tag-table">
<tbody>
<tr>
<td class="label">cached objects</td>
<td>5678 (56.78 MB) <button class="clear-btn">(clear)</button>
</td>
</tr>
</tbody>
</table>
<h3 class="summary-heading">import a bundle</h3>
<p>A <a href="https://git-scm.com/docs/git-bundle">bundle</a> contains Git objects. Loading one preloads objects into gib's storage, greatly speeding up performance. You can create one from a Git clone with: <code>git bundle create repo.bundle --all</code>, or download one from the branches and tags pages.</p>
<p>
<input type="file" accept=".bundle,application/x-git-bundle" class="import-input">
</p>
</div>
