src/render/snapshots/webgit__render__about__tests__about_html_without_idb.snap
---
source: src/render/about.rs
expression: render(fixture(false))
---
<div class="about">
<h3 class="summary-heading">repository</h3>
<table class="tag-table">
<tbody>
<tr>
<td class="label">clone URL</td>
<td class="mono">https://example.org/repo.git</td>
</tr>
<tr>
<td class="label">HEAD branch</td>
<td>main</td>
</tr>
<tr>
<td class="label">branches</td>
<td>3</td>
</tr>
<tr>
<td class="label">tags</td>
<td>7</td>
</tr>
</tbody>
</table>
<h3 class="summary-heading">gib viewer</h3>
<p>gib ("git-in-browser") allows you to view repositories entirely client-side. Objects are fetched as needed and stored in IndexedDB, similar to how <code>git</code> normally works.<br>The <a href="https://git.legoktm.com/public/webgit.git/">source code</a> is available (<code>0123abcd</code>).</p>
<table class="tag-table">
<tbody>
<tr>
<td class="label">cache</td>
<td>IndexedDB unavailable</td>
</tr>
</tbody>
</table>
</div>
